@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.mysema.querydsl</groupId>
   <artifactId>querydsl-root</artifactId>
-  <version>3.2.3.BUILD-SNAPSHOT</version>
+  <version>3.2.5.BUILD-SNAPSHOT</version>
   <name>Querydsl</name>
   <description>parent project for Querydsl modules</description>
   <url>http://www.querydsl.com</url>
@@ -12,7 +12,7 @@
   <parent>
     <groupId>com.mysema.home</groupId>
     <artifactId>mysema-source</artifactId>
-    <version>0.3.0</version>
+    <version>0.3.1</version>
   </parent>
   
   <packaging>pom</packaging>
@@ -35,7 +35,7 @@
     <sqlite.version>3.7.2</sqlite.version>
     
     <guava.version>13.0.1</guava.version>
-    <codegen.version>0.5.9</codegen.version>
+    <codegen.version>0.6.1</codegen.version>
     <mysema.lang.version>0.2.4</mysema.lang.version>
     <cglib.version>2.2.2</cglib.version>    
     <findbugs.version>1.3.2</findbugs.version>
@@ -69,9 +69,9 @@
       </exclusions>
     </dependency>
   </dependencies>
-  
+
   <dependencyManagement>
-      <dependencies>
+    <dependencies>
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
@@ -81,9 +81,9 @@
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-log4j12</artifactId>
         <version>${slf4j.version}</version>
-          <scope>provided</scope>
-      </dependency>    
-      </dependencies>
+        <scope>provided</scope>
+      </dependency>
+    </dependencies>
   </dependencyManagement>
 
   <organization>
@@ -150,7 +150,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-assembly-plugin</artifactId>
-          <version>2.2-beta-5</version>
+          <version>2.4</version>
         </plugin>
         <plugin>
           <groupId>com.mysema.maven</groupId>
@@ -160,7 +160,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.14</version>
+          <version>2.16</version>
         </plugin>
         <plugin>
           <groupId>com.springsource.bundlor</groupId>
@@ -194,7 +194,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.6</version>
+        <version>2.9.1</version>
         <configuration>
           <outputDirectory>${project.build.directory}/dist/apidocs</outputDirectory>
           <reportOutputDirectory>${project.build.directory}/dist/apidocs</reportOutputDirectory>
@@ -255,7 +255,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.0</version>
+        <version>3.1</version>
         <configuration>
           <source>1.6</source>
           <target>1.6</target>
@@ -286,7 +286,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>-Xms256m -Xmx512m</argLine>
+          <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=512m</argLine>
           <excludedGroups>com.mysema.testutil.ExternalDB</excludedGroups>
         </configuration>
         <dependencies>
@@ -462,6 +462,7 @@
         <module>../querydsl-codegen</module>
         <module>../querydsl-sql</module>
         <module>../querydsl-sql-codegen</module>
+        <module>../querydsl-maven-plugin</module>        
       </modules>
     </profile>        
   
@@ -483,7 +484,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>          
-              <excludedGroups/>
+              <excludedGroups>com.mysema.testutil.DummyInterface</excludedGroups>
             </configuration>
           </plugin>
         </plugins>
@@ -497,7 +498,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.6</version>
+        <version>2.9.1</version>
         <configuration>
           <detectJavaApiLink>true</detectJavaApiLink>
         </configuration>
